dom/media/webaudio/AudioNode.cpp
@@ -91,7 +91,10 @@ AudioNode::Initialize(const AudioNodeOptions& aOptions, ErrorResult& aRv)
   }
 
   if (aOptions.mChannelInterpretation.WasPassed()) {
-    SetChannelInterpretationValue(aOptions.mChannelInterpretation.Value());
+    SetChannelInterpretationValue(aOptions.mChannelInterpretation.Value(), aRv);
+    if (NS_WARN_IF(aRv.Failed())) {
+      return;
+    }
   }
 }
 
